--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -49,6 +49,16 @@ permalink: /impressum
         <p>Der Betreiber von borchard-orthopaedie.de ist bemüht, das Internetangebot stets aktuell und inhaltlich richtig, sowie vollständig anzubieten. Dennoch ist das Auftreten von Fehlern nicht völlig auszuschließen. Es wird keine Haftung für die Aktualität, die inhaltliche Richtigkeit, sowie die Vollständigkeit der im Webangebot eingestellten Informationen übernommen, es sei denn, die Fehler wurden vorsätzlich oder grob fahrlässig begangen. Dies bezieht sich auf eventuelle Schäden materieller oder ideeller Art Dritter, die durch die Nutzung dieses Webangebotes verursacht wurden.</p>
         <h2>Externe Links und Verweise</h2>
         <p>Mit Urteil vom 12. Mai 1998 hat das LG Hamburg entschieden, dass man durch die Ausbringung eines Links die Inhalte der gelinkten Seite ggf. mit zu verantworten hat. Dies kann, so das LG, nur dadurch verhindert werden, dass man sich ausdrücklich von diesen Inhalten distanziert. Da auf dem Internetangebot von borchard-orthopaedie.de Links zu Seiten im Internet gelegt sind, deren Inhalt und Aktualisierung nicht dem Einflussbereich des Betreibers von borchard-orthopaedie.de unterliegen, gilt für alle diese Links: “Der Betreiber von borchard-orthopaedie.de hat keinen Einfluss auf Gestaltung und Inhalte fremder Internetseiten. Der Betreiber von borchard-orthopaedie.de distanziert sich daher von allen fremden Inhalten, auch wenn auf diese externen Seiten ein Link gesetzt wurde.” Diese Erklärung gilt für alle auf dem Webangebot von borchard-orthopaedie.de angezeigten externen Links und für alle Inhalte der Seiten, zu denen die bei borchard-orthopaedie.de erwähnten Links führen.</p>
+
+        <h2>Bildrechte</h2>
+        <p>Fotos auf Startseite, Orthopädie-Schuhtechnik und Sanitätshaus erstellt von:
+        <br><strong><a href="https://www.nicole-bouillon-fotografie.de">Nicole Bouillon Fotografie</a></strong>
+        <br>Emser Str. 57, 56112 Lahnstein
+        <br>Tel.: 0160/96829979 oder 02621/628488</p>
+        <p>Foto auf Regionaler Versorgung mit Erlaubnis von: <br><strong><a href="https://hepeters.bplaced.com/wordpress/?p=4182">Hans-Eberhard Peters</a></strong></p>
+        <p>Fotos auf Bandagen und Orthesen von:
+        <br><strong><a href="https://www.bauerfeind.de">Bauerfeind</a></strong></p>
+
         <h2>Datenschutz</h2>
         <h4>Datenschutzerklärung</h4>
         <p>Wir freuen uns sehr über Ihr Interesse an unserem Unternehmen. Datenschutz hat einen besonders hohen Stellenwert für die Geschäftsleitung der Orthopaedie-Schuhtechnik-Sanitaetshaus Walter Borchard. Eine Nutzung der Internetseiten der Orthopaedie-Schuhtechnik-Sanitaetshaus Walter Borchard ist grundsätzlich ohne jede Angabe personenbezogener Daten möglich. Sofern eine betroffene Person besondere Services unseres Unternehmens über unsere Internetseite in Anspruch nehmen möchte, könnte jedoch eine Verarbeitung personenbezogener Daten erforderlich werden. Ist die Verarbeitung personenbezogener Daten erforderlich und besteht für eine solche Verarbeitung keine gesetzliche Grundlage, holen wir generell eine Einwilligung der betroffenen Person ein.</p>
