--- a/pages/regionale-versorgung.html
+++ b/pages/regionale-versorgung.html
@@ -457,7 +457,7 @@ permalink: /regionale-versorgung
         </table>
     </div>
 
-    <div class="section institution-container ">
+    <div class="section institution-container last-element">
         <h3>Region Taunus und Rhein-Schiene</h3>
         <table class="institution-table">
 
@@ -540,9 +540,5 @@ permalink: /regionale-versorgung
             </tr>
 
         </table>
-    </div>
-
-    <div class="text last-element">
-        <p>Foto mit Erlaubnis von <a href="https://hepeters.bplaced.com/wordpress/?p=4182">Hans-Eberhard Peters</a></p>
     </div>
 </main>
