--- a/pages/404.html
+++ b/pages/404.html
@@ -7,7 +7,7 @@ permalink: /404.html
 <style type="text/css" media="screen">
   h1 {
     margin: 30px 0;
-    font-size: 4em;
+    font-size: 2.5em;
     line-height: 1;
     letter-spacing: -1px;
   }
@@ -36,15 +36,25 @@ permalink: /404.html
         </div>
     </nav>
     <div>
-        <h1>Seite nicht gefunden</h1>
+        <h1>Seite existiert nicht</h1>
     </div>
 </header>
 <main>
     <!--hihi-->
-    <div class="error-message">
-        <div class="error-message">
-            <p>Der Link war fehlerhaft oder die gesuchte Seite exisitiert nicht mehr. 
-            </br>Benutzen Sie das Menü um danach zu suchen oder melden Sie sich bei uns, wenn Sie etwas vermissen.</p>
+    <div class="error-message" style="display: flex; align-items:center;flex-direction:column;">
+        <div class="error-message" >
+            <p style="text-align: center;">Der Link war fehlerhaft oder die gesuchte Seite exisitiert nicht mehr.
+            <br>Benutzen Sie das Menü um danach zu suchen oder melden Sie sich bei uns, wenn Sie etwas vermissen.</p>
         </div>
+        <div>
+
+
+        <a href="/orthopaedie-schuhtechnik" class="btn btn--standard btn--red">
+              Orthopädie-Schuhtechnik
+          </a>
+  	    <a href="/sanitaetshaus" class="btn btn--standard btn--red">
+              Sanitätshaus
+          </a>
+          </div>
     </div>
 </main>
