--- a/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
+++ b/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | 3-Sohlen-Konzept
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie unser 3-Sohlen-Konzept."
 permalink: /orthopaedie-schuhtechnik/3-sohlen-konzept
+redirect_from:
+  - /index.php/3-sohlen-konzept
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
@@ -76,7 +78,7 @@ permalink: /orthopaedie-schuhtechnik/3-sohlen-konzept
         </div>
 
         <p>Varomed der Schuh abseits der gängigen Norm. Der sich durch sein herrlich leichtes Gewicht, großes Volumen, sowie softige Materialien auszeichnet. Selbstverständlich ist der Schuh auch für lose Einlagen geeignet, aber auch jederzeit ohne Einlagen zu tragen.</p>
-        
+
         <h5>Diese Schuhe gibt es von der „H“ bis zur „R“-Weite</h5>
         <ul class="card__list text__list">
             <li>Bequemweiten von H bis R</li>
