--- a/pages/Orthopaedie-Schuhtechnik/diabetische-fussversorgung.html
+++ b/pages/Orthopaedie-Schuhtechnik/diabetische-fussversorgung.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Diabetische Fußversorgung
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie diabetische Fußversorgung."
 permalink: /orthopaedie-schuhtechnik/diabetische-fussversorgung
+redirect_from:
+  - /index.php/leistungen/orthopädie-schuhtechnik/diabetische-fußversorgung
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
