--- a/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
+++ b/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
@@ -3,6 +3,9 @@ layout: default
 title: Walter Borchard | Einlagentechnik
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie Einlagentechnik."
 permalink: /orthopaedie-schuhtechnik/einlagentechnik
+redirect_from:
+  - /index.php/leistungen/orthopädie-schuhtechnik/einlagen
+  - /index.php/leistungen/orthopädie-schuhtechnik/senso-neuromotorische-einlage
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
@@ -36,12 +39,12 @@ permalink: /orthopaedie-schuhtechnik/einlagentechnik
         <p>Grundsätzlich gilt: Eine Einlage die nicht getragen wird, hilft nicht! Darum ist es wichtig, die Einlagen auch nachträglich zu überprüfen und anzupassen.</p>
         <p>Wir bieten von der Basis-, bis Premium-Einlage eine breite Palette zur Auswahl an. Entscheidend für eine positive Einlagenversorgung ist der richtige Schuh und darauf abgestimmte Art der Einlage.
         Für ein positives Therapieergebnis ist die richtige Einlagenart notwendig!</p>
-        
+
         <h4>Senso-Neuromotorische Einlage</h4>
         <p>Bei Einlagen unterscheidet man zwischen einer aktiven und eine passiven Art. Im Bereich der sensomotorischen und neurologischen Einlagen eröffnet sich für die Orthopädie-Schuhtechnik ein anderer dynamischer, aktiver Versorgungsbereich. Sie stimuliert die Fußmuskulatur und somit den ganzen Körper, löst etliche Verspannungen und aktiviert die Beweglichkeit.</p>
         <p>Nach Ausgabe der Sohle erfolgt 6 Wochen später eine Kontrolle der Statik, ggfls. mit einer Anpassung. Die Wahrnehmung dieses Termins liegt in der Verantwortung des Kunden. In der ersten Zeit des Einlaufens kann es zu Muskelkater im Bereich der Wadenmuskulatur kommen. In seltenen Fällen kann es zu Schwindelgefühlen oder Kopfschmerzen führen. In diesen Fällen muss eventuell eine Korrektur der Sohle vorgenommen werden oder die Einlaufzeit, mit ½ Stunde beginnend langsam steigern.</p>
         <p>Grundsätzlich gilt, bei Auffälligkeiten Rücksprache zu nehmen und im Fachgeschäft vorzusprechen. Die Erfahrung zeigt, dass diese Fälle eher die Ausnahme sind und durch individuelle Maßnahmen zu einem positiven Ergebnis führen. Unterstützende Maßnahmen sind z. B. Neutraltherapie und Osteopathie. Ziel solcher Therapien ist es, blockierte Gelenke zu lösen und Narben-Störfelder aufzulösen um so schneller eine allgemeine Besserung zu erreichen.</p>
-        
+
 
         <div class="text__element-row">
         <div>
