--- a/pages/Orthopaedie-Schuhtechnik/fuss-und-koerper-analyse.html
+++ b/pages/Orthopaedie-Schuhtechnik/fuss-und-koerper-analyse.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Einlagentechnik
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie Fuß- und Körperanalyse."
 permalink: /orthopaedie-schuhtechnik/fuss-und-koerper-analyse
+redirect_from:
+- /index.php/leistungen/body-check-center
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
