--- a/pages/Orthopaedie-Schuhtechnik/orthopaedische-massschuhe.html
+++ b/pages/Orthopaedie-Schuhtechnik/orthopaedische-massschuhe.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Orthopädische Maßschuhe
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie orthopädische Maßschuhe."
 permalink: /orthopaedie-schuhtechnik/orthopaedische-massschuhe
+redirect_from:
+  - /index.php/leistungen/orthopädie-schuhtechnik/orthopädische-maßschuhe
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
@@ -29,7 +31,7 @@ permalink: /orthopaedie-schuhtechnik/orthopaedische-massschuhe
 
 <main>
     <div class="text">
-        <p>Wenn andere schuhtechnische Maßnahmen nicht ausreichen, ist der orthopädische Maßschuh eine Alternative. Der Maßschuh ist ein Unikat. Er wird nach den Maßen und Formen des Fußes individuell für einen Kunden handwerklich hergestellt. Seine Aufgabe ist es, der Statik des Fußes bei den Bewegungen des Gehens und dem Stehen Funktion und Korrektur zu geben.</p>    
+        <p>Wenn andere schuhtechnische Maßnahmen nicht ausreichen, ist der orthopädische Maßschuh eine Alternative. Der Maßschuh ist ein Unikat. Er wird nach den Maßen und Formen des Fußes individuell für einen Kunden handwerklich hergestellt. Seine Aufgabe ist es, der Statik des Fußes bei den Bewegungen des Gehens und dem Stehen Funktion und Korrektur zu geben.</p>
         <h5>Ausführungen</h5>
         <ul class="text__list">
             <li>Straßenschuhe</li>
