--- a/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
+++ b/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Schuhzurichtung
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie Schuhzurichtung."
 permalink: /orthopaedie-schuhtechnik/schuhzurichtung
+redirect_from:
+  - /index.php/leistungen/orthopädie-schuhtechnik/schuhkorrekturen
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
@@ -29,7 +31,7 @@ permalink: /orthopaedie-schuhtechnik/schuhzurichtung
 
 <main>
     <div class="text">
-        <p>Schuhkorrekturen sind Veränderungen an vorhandenen Schuhen, das heißt, Sie haben Probleme in der Statik, in der Abrollung beim Laufen, punktueller Schmerz in der Fußsohle - z.B. Metatarsalgie der Mittelfußköpfchen (Mfk). Eine Abrollhilfe ist eine biomechanische Abrollung wo der Scheitelpunkt je nach Indikation nach Anweisung des Arztes gesetzt wird. Bei der Schmetterlingsrolle ist der Scheitelpunkt unterhalb der Ballen mit Polsterung der Mfk 2 und 3 mit Abdecksohle. Die Schuhkorrektur ist eine gute Möglichkeit, schnell und effektiv Abhilfe zu schaffen. Manchmal kann es notwendig sein, als Ergänzung eine maßangefertigte Einlage zu tragen.</p>    
+        <p>Schuhkorrekturen sind Veränderungen an vorhandenen Schuhen, das heißt, Sie haben Probleme in der Statik, in der Abrollung beim Laufen, punktueller Schmerz in der Fußsohle - z.B. Metatarsalgie der Mittelfußköpfchen (Mfk). Eine Abrollhilfe ist eine biomechanische Abrollung wo der Scheitelpunkt je nach Indikation nach Anweisung des Arztes gesetzt wird. Bei der Schmetterlingsrolle ist der Scheitelpunkt unterhalb der Ballen mit Polsterung der Mfk 2 und 3 mit Abdecksohle. Die Schuhkorrektur ist eine gute Möglichkeit, schnell und effektiv Abhilfe zu schaffen. Manchmal kann es notwendig sein, als Ergänzung eine maßangefertigte Einlage zu tragen.</p>
 
         <p>Auf besonderen Wunsch schneiden wir beim alten Schuh die Schuhsohle auf und setzten die Korrektur dazwischen, falls der Schuh dafür geeignet ist. So bleibt die Originalsohle erhalten – fragen Sie uns danach!</p>
 
