--- a/pages/Sanitaetshaus/bandagen.html
+++ b/pages/Sanitaetshaus/bandagen.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Bandagen
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an Sanitätsartikeln wie Bandagen."
 permalink: /sanitaetshaus/bandagen
+redirect_from:
+  - /index.php/leistungen/sanitätshaus/bandagen
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
