--- a/pages/Sanitaetshaus/kompressionsstruempfe.html
+++ b/pages/Sanitaetshaus/kompressionsstruempfe.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Kompressionsstrümpfe
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an Sanitätsartikeln wie Kompressionsstrümpfe."
 permalink: /sanitaetshaus/kompressionsstruempfe
+redirect_from:
+  - /index.php/leistungen/sanitätshaus/kompressionstherapie
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
