--- a/pages/Sanitaetshaus/orthesen.html
+++ b/pages/Sanitaetshaus/orthesen.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Orthesen
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an Sanitätsartikeln wie Orthesen."
 permalink: /sanitaetshaus/orthesen
+redirect_from:
+  - /index.php/leistungen/sanitätshaus/orthesen
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
@@ -89,7 +91,7 @@ permalink: /sanitaetshaus/orthesen
                 <p>Grundsätzlich müssen Orthesen angepasst und eingestellt werden. Je nach Modell und Art ist eine Nachversorgung nach Angaben des behandelnden Arztes möglich oder notwendig. Zum einen gibt der Arzt das Modell vor zum anderen besteht die Möglichkeit Alternativprodukte auszuprobieren.</p>
                 <p>Vor Ort können Sie die Produkte selber anprobieren und sich von unseren freundlichen und kompetenten Mitarbeiterinnen beraten lassen.</p>
                 <p>Außerdem empfehlen wir, vom Arzt/Facharzt eine gezielte Diagnose erstellen zu lassen.</p>
-                
+
                 </p>Für hilfreiche Übungen verweisen wir auf die  <a href="https://apps.bauerfeind.com/therapy/" target=_blank>Therapie-App von Bauerfeind</a>.<p>
             </div>
             <a href="/assets/bauerfeind-orthesen.jpg" target="_blank"><img class="text__image text__image--float" id="bauerfeind-plakat" src="/assets/bauerfeind-orthesen.jpg" alt="Bauerfeind Orthesen"></a>
