--- a/pages/firma.html
+++ b/pages/firma.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Firma
 description: "Unser Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein blickt auf eine lange Firmengeschichte und Familientradition zurück."
 permalink: /firma
+redirect_from:
+- /index.php/ueber-uns
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
