--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -3,6 +3,8 @@ layout: default
 title: Impressum und Datenschutz
 description: Rechtliche Informationen
 permalink: /impressum
+redirect_from:
+- /index.php/impressum
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
