--- a/pages/index.html
+++ b/pages/index.html
@@ -3,6 +3,16 @@ layout: default
 title: Walter Borchard | Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein
 description: "Orthopädie-Schuhtechnik und Sanitätshaus in Lahnstein für die Region Rhein-Lahn/Süd-Westerwald  und Koblenz."
 permalink: /
+redirect_from:
+- /index.php/ueber-uns/service
+- /index.php/ueber-uns/hausprospekte
+- /index.php/ueber-uns/aktuell
+- /index.php/ueber-uns/grußkarten
+- /index.php/leistungen
+- /index.php/3-sohlen-konzept/marken
+- /index.php/schmerzen
+- /index.php/schmerzen/infos
+- /index.php/kontakt
 ---
 
 <header class="header header--hero">
