--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Orthopädie-Schuhtechnik
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie Orthopädische Maßschuhe, diabetische Fußversorgung und Einlagen."
 permalink: /orthopaedie-schuhtechnik
+redirect_from:
+  - /index.php/leistungen/orthopädie-schuhtechnik
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
