--- a/pages/regionale-versorgung.html
+++ b/pages/regionale-versorgung.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Regionale Versorgung
 description: "Eine Übersicht des Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein über ärztliche Versorgung in der Region Rhein-Lahn/Süd-Westerwald."
 permalink: /regionale-versorgung
+redirect_from:
+  - /index.php/schmerzen/links
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
