--- a/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
+++ b/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
@@ -3,6 +3,8 @@ layout: default
 title: Walter Borchard | Arbeitssicherheitsschuhe
 description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir eine Vielzahl an orthopädieschen Produkten und Leistungen wie Arbeitssicherheitsschuhe."
 permalink: /orthopaedie-schuhtechnik/arbeitssicherheitsschuhe
+redirect_from:
+- /index.php/leistungen/arbeitssicherheitsschuhe
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
@@ -32,7 +34,7 @@ permalink: /orthopaedie-schuhtechnik/arbeitssicherheitsschuhe
         <p><strong>Sie  brauchen  orthopädische  Einlagen  und  Schuhveränderungen für Ihren Arbeitssicherheitsschuh?</strong></p>
         <h4>Was tun?</h4>
         <p>Rezept  –  am  besten  vom  Facharzt  –  geeignete Arbeitssicherheitsschuhe  gem.  BGR  191,  welche  für Einlagen oder Schuhveränderung freigegeben sind. Eventuell  mit Arbeitgeber  oder  Sicherheitsbeauftragten abklären.</p>
-        
+
         <h4>Kostenträger</h4>
         <ul class="card__list text__list">
             <li>BG nach Unfall</li>
