Bild für Ortho Schuhe und Vorbereitung auf Consent

--- a/pages/Orthopaedie-Schuhtechnik/orthopaedische-massschuhe.html
+++ b/pages/Orthopaedie-Schuhtechnik/orthopaedische-massschuhe.html
@@ -6,7 +6,7 @@ permalink: /orthopaedie-schuhtechnik/orthopaedische-massschuhe
 redirect_from:
   - /index.php/leistungen/orthopädie-schuhtechnik/orthopädische-maßschuhe
 ---
-<header class="header header--simple">
+<header class="header header--hero">
     <nav class="header__nav-bar">
         <a href="/" class="nav__logo">
             <img class="nav__logo-img" src="/assets/logo-simple.png" alt="Logo">
@@ -24,8 +24,10 @@ redirect_from:
             <a href="/regionale-versorgung" class="nav__menu-item">Regionale Versorgung</a>
         </div>
     </nav>
-    <div>
+    <div class="header__image header__image--center header__image--ortho-schuhe">
+      <div class="header__text">
         <h1>Orthopädische Maßschuhe</h1>
+      </div>
     </div>
 </header>
 
