Responsive angepasst, Firma Überschrift, RV Tab

--- a/pages/firma.html
+++ b/pages/firma.html
@@ -25,12 +25,13 @@ redirect_from:
         </div>
     </nav>
     <div class="header__image header__image--center header__image--firma">
-      <div class="header__text">
-        <h1>Firma</h1>
-      </div>
+    
     </div>
-</header>
 
+</header>
+<div>
+    <h1 style="text-align:center;">Firma</h1>
+</div>
 <main>
     <div class="text">
         <p>Wir sind ein Inhaber-geführtes, zertifiziertes Fachgeschäft in den Bereichen Orthopädie – Schuhtechnik und Sanitätshaus mit der Konzentration auf einen Standort. Unsere modernen Räumlichkeiten liegen zentral in Oberlahnstein am Salhofplatz, mit großem Parkplatzangebot.</p>
