--- a/pages/regionale-versorgung.html
+++ b/pages/regionale-versorgung.html
@@ -47,7 +47,7 @@ redirect_from:
             <tr class="institution">
                 <td class="institution__data">
                     <div class="institution__type">Orthopädische Gemeinschaftspraxis</div>
-                    <div class="institution__people">Dres. Altawili, Erlinghagen</div>
+                    <div class="institution__people">Dres. Altawili, Erlinghagen, Rosswag</div>
                 </td>
                 <td class="institution__data">
                     <a href="tel:02621 2683" class="institution__phone">02621 2683</a>
@@ -262,7 +262,7 @@ redirect_from:
             <tr class="institution">
                 <td class="institution__data">
                     <div class="institution__type">Orthopädische Gemeinschaftspraxis</div>
-                    <div class="institution__people">Dres. Altawili, Erlinghagen</div>
+                    <div class="institution__people">Dres. Altawili, Erlinghagen, Rosswag</div>
                 </td>
                 <td class="institution__data">
                     <a href="tel:02603 6000" class="institution__phone">02603 6000</a>
@@ -364,6 +364,19 @@ redirect_from:
                 </td>
             </tr>
 
+            <tr class="institution">
+                <td class="institution__data">
+                    <div class="institution__type">Facharzt für Allgemeinmedizin</div>
+                    <div class="institution__people">Dr. Schenking</div>
+                </td>
+                <td class="institution__data">
+                    <a href="tel:12345678" class="institution__phone">02603-94030 </a>
+                </td>
+                <td class="institution__data">
+                    <div class="institution__adress">Römerstr. 80</div>
+                </td>
+            </tr>
+
         </table>
     </div>
 
@@ -387,7 +400,7 @@ redirect_from:
             <tr class="institution">
                 <td class="institution__data">
                     <div class="institution__type">Zweitpraxis</div>
-                    <div class="institution__people">Dr. Jäger</div>
+                    <div class="institution__people">Dr. Jäger, Dr. Klimaschka</div>
                 </td>
                 <td class="institution__data">
                     <a href="tel:02604 4439" class="institution__phone">02604 4439</a>
@@ -400,7 +413,7 @@ redirect_from:
             <tr class="institution">
                 <td class="institution__data">
                     <div class="institution__type">Hausarzt und Internist</div>
-                    <div class="institution__people">Dr. Suleimann</div>
+                    <div class="institution__people">Dr. Suleimann, MVZ Lahntal</div>
                 </td>
                 <td class="institution__data">
                     <a href="tel:02604 943377" class="institution__phone">02604 943377</a>
@@ -414,7 +427,7 @@ redirect_from:
     </div>
 
     <div class="section institution-container">
-        <h3>Region Augst Region Taunus und Rhein-Schiene</h3>
+        <h3>Region Augst</h3>
         <table class="institution-table">
 
             <tr class="institution">
@@ -517,27 +530,27 @@ redirect_from:
 
             <tr class="institution">
                 <td class="institution__data">
-                    <div class="institution__type">MVZ Mühlbachtal</div>
-                    <div class="institution__people">Dr. Hoffmann</div>
-                </td>
-                <td class="institution__data">
-                    <a href="tel:12345678" class="institution__phone">06772-7005</a>
-                </td>
-                <td class="institution__data">
-                    <div class="institution__adress">Teichstr. 4 <b>Miehlen</div>
-                </td>
-            </tr>
-
-            <tr class="institution">
-                <td class="institution__data">
-                    <div class="institution__type">MVZ Mühlbachtal</div>
-                    <div class="institution__people">Dr. Palacios</div>
+                    <div class="institution__type">Facharzt für Allgemeinmedizin</div>
+                    <div class="institution__people">Dr. Schenking</div>
                 </td>
                 <td class="institution__data">
                     <a href="tel:12345678" class="institution__phone">06776-484</a>
                 </td>
                 <td class="institution__data">
                     <div class="institution__adress">Schulstr. 14 <b>Dachsenhausen</div>
+                </td>
+            </tr>
+
+            <tr class="institution">
+                <td class="institution__data">
+                    <div class="institution__type">Orthopädische Gemeinschaftspraxis</div>
+                    <div class="institution__people">Lars Bühring & Timo Besant</div>
+                </td>
+                <td class="institution__data">
+                    <a href="tel:12345678" class="institution__phone">06772-8048300</a>
+                </td>
+                <td class="institution__data">
+                    <div class="institution__adress">Borngasse 14, <br>56355 Nastätten</div>
                 </td>
             </tr>
 
