Redirects und Öffnungszeiten

--- a/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
+++ b/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
@@ -5,6 +5,8 @@ description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir 
 permalink: /orthopaedie-schuhtechnik/arbeitssicherheitsschuhe
 redirect_from:
 - /index.php/leistungen/arbeitssicherheitsschuhe
+- /index.php/leistungen/arbeitssicherheitsschuhe/63-arbeitssicherheitsschuhe
+- /leistungen/arbeitssicherheitsschuhe/40-arbeitssicherheitsschuhe-rechts
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
