--- a/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
+++ b/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
@@ -6,6 +6,7 @@ permalink: /orthopaedie-schuhtechnik/einlagentechnik
 redirect_from:
   - /index.php/leistungen/orthopädie-schuhtechnik/einlagen
   - /index.php/leistungen/orthopädie-schuhtechnik/senso-neuromotorische-einlage
+  - /index.php/leistungen/orthopädie-schuhtechnik/senso-neuromotorische-einlage/38-senso-neuromotorische-einlage
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
