--- a/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
+++ b/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
@@ -5,6 +5,8 @@ description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir 
 permalink: /orthopaedie-schuhtechnik/schuhzurichtung
 redirect_from:
   - /index.php/leistungen/orthopädie-schuhtechnik/schuhkorrekturen
+  - /index.php/leistungen/orthopädie-schuhtechnik/schuhkorrekturen/46-schuhkorrekturen-bild
+  - /leistungen/orthopädie-schuhtechnik/schuhkorrekturen/50-schuhkorrekturen
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
