--- a/pages/Sanitaetshaus/kompressionsstruempfe.html
+++ b/pages/Sanitaetshaus/kompressionsstruempfe.html
@@ -5,6 +5,7 @@ description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir 
 permalink: /sanitaetshaus/kompressionsstruempfe
 redirect_from:
   - /index.php/leistungen/sanitätshaus/kompressionstherapie
+  - /index.php/leistungen/sanitätshaus/34-kompressionsstrümpfe
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
