--- a/pages/firma.html
+++ b/pages/firma.html
@@ -5,6 +5,9 @@ description: "Unser Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein blickt a
 permalink: /firma
 redirect_from:
 - /index.php/ueber-uns
+- /index.php/ueber-uns/5-ueber-uns
+- /ueber-uns/service
+- /ueber-uns/hausprospekte
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
@@ -25,7 +28,7 @@ redirect_from:
         </div>
     </nav>
     <div class="header__image header__image--center header__image--firma">
-    
+
     </div>
 
 </header>
