--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -5,6 +5,7 @@ description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir 
 permalink: /orthopaedie-schuhtechnik
 redirect_from:
   - /index.php/leistungen/orthopädie-schuhtechnik
+  - /component/search/?searchword=Orthopädie
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
