--- a/pages/sanitaetshaus.html
+++ b/pages/sanitaetshaus.html
@@ -5,6 +5,7 @@ description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir 
 permalink: /sanitaetshaus
 redirect_from:
   - /index.php/leistungen/sanitätshaus
+  - /index.php/leistungen/sanitätshaus/43-sanitätshaus
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
