--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,7 @@ redirect_from:
 - /index.php/schmerzen
 - /index.php/schmerzen/infos
 - /index.php/kontakt
+- /kontakt/sitemap
 ---
 
 <header class="header header--hero">
@@ -66,7 +67,7 @@ redirect_from:
 			<div class="open footer-section" style="margin-bottom: 10px;">
 					<div>
 							<strong>Montag und Donnerstag</strong>
-							<br>8:30-17:30
+							<br>8:30-18:00
 					</div>
 					<div>
 							<br><strong>Dienstag, Mittwoch und Freitag</strong>
