--- a/pages/Sanitaetshaus/bandagen.html
+++ b/pages/Sanitaetshaus/bandagen.html
@@ -5,6 +5,7 @@ description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir 
 permalink: /sanitaetshaus/bandagen
 redirect_from:
   - /index.php/leistungen/sanitätshaus/bandagen
+  - /index.php/schmerzen/infos/17-bandagen
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
