--- a/pages/Sanitaetshaus/orthesen.html
+++ b/pages/Sanitaetshaus/orthesen.html
@@ -5,6 +5,7 @@ description: "Im Orthopädie-Schuhtechnik Sanitätshaus in Lahnstein bieten wir 
 permalink: /sanitaetshaus/orthesen
 redirect_from:
   - /index.php/leistungen/sanitätshaus/orthesen
+  - /index.php/leistungen/sanitätshaus/37-orthesen
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
