--- a/pages/index.html
+++ b/pages/index.html
@@ -14,6 +14,8 @@ redirect_from:
 - /index.php/schmerzen/infos
 - /index.php/kontakt
 - /kontakt/sitemap
+- /index.php/kontakt/sitemap
+- /index.php/
 ---
 
 <header class="header header--hero">
