--- a/pages/orthopaedie-schuhtechnik.html
+++ b/pages/orthopaedie-schuhtechnik.html
@@ -6,6 +6,7 @@ permalink: /orthopaedie-schuhtechnik
 redirect_from:
   - /index.php/leistungen/orthopädie-schuhtechnik
   - /component/search/?searchword=Orthopädie
+  - /index.php/leistungen/orthopädie-schuhtechnik/57-orthopädie-schuhtechnik-rechts
 ---
 <header class="header header--hero">
     <nav class="header__nav-bar">
