--- a/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
+++ b/pages/Orthopaedie-Schuhtechnik/einlagentechnik.html
@@ -7,6 +7,7 @@ redirect_from:
   - /index.php/leistungen/orthopädie-schuhtechnik/einlagen
   - /index.php/leistungen/orthopädie-schuhtechnik/senso-neuromotorische-einlage
   - /index.php/leistungen/orthopädie-schuhtechnik/senso-neuromotorische-einlage/38-senso-neuromotorische-einlage
+  - /index.php/leistungen/orthopädie-schuhtechnik/einlagen/37-einlagen
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
