--- a/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
+++ b/pages/Orthopaedie-Schuhtechnik/schuhzurichtung.html
@@ -7,6 +7,7 @@ redirect_from:
   - /index.php/leistungen/orthopädie-schuhtechnik/schuhkorrekturen
   - /index.php/leistungen/orthopädie-schuhtechnik/schuhkorrekturen/46-schuhkorrekturen-bild
   - /leistungen/orthopädie-schuhtechnik/schuhkorrekturen/50-schuhkorrekturen
+  - /index.php/leistungen/orthopädie-schuhtechnik/schuhkorrekturen/50-schuhkorrekturen
 ---
 <header class="header header--simple">
     <nav class="header__nav-bar">
