--- a/pages/index.html
+++ b/pages/index.html
@@ -139,8 +139,8 @@ redirect_from:
     </div>
     <div class="section">
     	<h2>Aktuelles</h2>
-    	<img src="assets/lager-abverkauf.png" alt="Angebot" class="offer">
-        <img src="assets/lager-abverkauf-mobile.png" alt="Angebot" class="offer-mobile">
+    	<img src="assets/offer-sommerschuhe.png" alt="Angebot" class="offer">
+        <img src="assets/offer-sommerschuhe-mobile.png" alt="Angebot" class="offer-mobile">
     </div>
 
     <div class="brand-banner section">
