links 3sohlen konzept

--- a/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
+++ b/pages/Orthopaedie-Schuhtechnik/3-sohlen-konzept.html
@@ -62,6 +62,8 @@ redirect_from:
             </tr>
         </table>
 
+        <p>Aktuelle Schuhmodelle auf <a href="https://finncomfort.de/">finncomfort.de</a></p>
+
         <div class="text__element-row text__element-row--center">
             <img class="text__image text__image--small" src="/assets/brands/Waldlaeufer.png" alt="Beipsielbild">
         </div>
@@ -73,18 +75,22 @@ redirect_from:
             <li>von Sandalen bis Slipper hoher Laufkomfort</li>
         </ul>
 
+        <p>Aktuelle Schuhmodelle auf <a href="https://shop-waldlaeufer.de/">shop-waldlaeufer.de</a></p>
+
         <div class="text__element-row text__element-row--center">
             <img class="text__image text__image--small" src="/assets/brands/Varomed.png" alt="Beipsielbild">
         </div>
 
         <p>Varomed der Schuh abseits der gängigen Norm. Der sich durch sein herrlich leichtes Gewicht, großes Volumen, sowie softige Materialien auszeichnet. Selbstverständlich ist der Schuh auch für lose Einlagen geeignet, aber auch jederzeit ohne Einlagen zu tragen.</p>
 
-        <h5>Diese Schuhe gibt es von der „H“ bis zur „R“-Weite</h5>
+        <h5>Diese Schuhe gibt es von der H- bis zur R-Weite</h5>
         <ul class="card__list text__list">
             <li>Bequemweiten von H bis R</li>
             <li>Pantoletten, Sandalen, Halbschuhe sowie Stiefel</li>
             <li>Der Problemlöser</li>
         </ul>
+
+        <p>Aktuelle Schuhmodelle auf <a href="https://www.florett.de/de/produkte/filters/marke/1078">florett.de</a></p>
 
     </div>
 
