--- a/pages/index.html
+++ b/pages/index.html
@@ -119,18 +119,8 @@ redirect_from:
     </div>
     <div class="section">
     	<h2>Aktuelles</h2>
-			<div class="text--center" style="margin-top: 40px;">
-	        <p>Sie verfügen über <strong>gute PC-Kenntnisse</strong> und <strong>medizinische Grundkenntnisse</strong>...</p>
-					<p>... und idealerweise über <strong>Erfahrung im Anmessen von Kompressionsstrümpfen</strong> und <strong>im Schuhverkauf?</strong></p>
-
-					<p>Gerne auch Arzthelfer, Physio- und Ergotherapeuten, Apothekenhelfer als Quereinsteiger (mwd).</p>
-
-
-					<p>Melden Sie sich bei Interesse gerne per E-Mail, Telefon oder kommen Sie direkt vorbei.</p>
-
-	    </div>
-    	<img src="assets/stellenanzeige.png" alt="Angebot" class="offer">
-        <img src="assets/stellenanzeige.png" alt="Angebot" class="offer-mobile">
+    	<img src="assets/offer-autumn2-sale.png" alt="Angebot" class="offer">
+        <img src="assets/offer-autumn2-sale-mobile.png" alt="Angebot" class="offer-mobile">
     </div>
 
     <div class="brand-banner section">
