Neue Antraege fuer ASS

--- a/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
+++ b/pages/Orthopaedie-Schuhtechnik/arbeitssicherheitsschuhe.html
@@ -62,10 +62,11 @@ redirect_from:
             <li><a target="_blank" href="/assets/documents/Antrag-auf-Kostenuebernahme.pdf">Antrag auf Kostenübernahme</a></li>
             <li><a target="_blank" href="/assets/documents/Antrag_auf_Kostenuebernahme_DTRV.pdf">Antrag auf Kostenübernahme Dt. Rentenversicherung</a></li>
             <li><a target="_blank" href="/assets/documents/Antrag-auf-Kostenuebernahme_Ortho_Fussschutz.pdf">Notwendigkeitsbescheinigung zum Tragen von orthopädischem Fußschutz (Deutsche Rentenversicherung)</a></li>
-            <li><a target="_blank" href="/assets/documents/G0100.pdf">Antrag G 100 auf Leistung zur Teilhabe für Versicherte (Deutsche Rentenversicherung)
+            <li><a target="_blank" href="/assets/documents/G0100.pdf">Antrag G0100 auf Leistung zur Teilhabe für Versicherte (Deutsche Rentenversicherung)
             </a></li>
-            <li><a target="_blank" href="/assets/documents/G0130.pdf">Antrag G 130 Anlage zum Antrag auf Leistungen zur Teilhabe am Arbeitsleben (berufliche Rehabilitation) (Deutsche Rentenversicherung)</a></li>
+            <li><a target="_blank" href="/assets/documents/G0133.pdf">Antrag G0133 Anlage zum Antrag auf Leistungen zur Teilhabe am Arbeitsleben (berufliche Rehabilitation) (Deutsche Rentenversicherung)</a></li>
         </ul>
+        <p>Bei Folgeversorgungen Einlagen Arbeitssicherheitsschuhe werden die Formulare „G0100 und G0133“ durch den <a target="_blank" href="/assets/documents/G0135.pdf">Antrag G0135</a> ersetzt.</p>
 
     </div>
 
