--- a/pages/index.html
+++ b/pages/index.html
@@ -119,8 +119,8 @@ redirect_from:
     </div>
     <div class="section">
     	<h2>Aktuelles</h2>
-    	<img src="assets/urlaub.png" alt="Angebot" class="offer">
-        <img src="assets/urlaub.png" alt="Angebot" class="offer-mobile">
+    	<img src="assets/offer-january.png" alt="Angebot" class="offer">
+        <img src="assets/offer-january.png" alt="Angebot" class="offer-mobile">
     </div>
 
     <div class="brand-banner section">
